<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/action_home">

    <fragment
        android:id="@+id/action_home"
        android:label="@string/ListFragment"
        android:name="com.marscode.pwn.adwytek.Screens.MedicineList.MedicineListFragment"
        tools:layout="@layout/fragment_medicine_list"></fragment>

   <fragment
       android:id="@+id/action_Add"
       android:label="@string/AddMedicine"
       android:name="com.marscode.pwn.adwytek.Screens.NewMedicine.NewMedicineFragment"
       tools:layout="@layout/fragment_new_medicine"></fragment>


    <fragment
        android:id="@+id/action_nearby"
        android:label="@string/Map"
        android:name="com.marscode.pwn.adwytek.Screens.NewMedicine.NewMedicineFragment"
        tools:layout="@layout/fragment_new_medicine"></fragment>
</navigation>