<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:id="@+id/medication_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/medicine_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_txt_medicine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/medicineName"
                android:inputType="text"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/medication_dose_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/frequency_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/dose_container">


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/medication_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/bg"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textSize="@dimen/small_txt" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_calendar_today_24"></ImageView>

                    <Button
                        android:id="@+id/btn_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/calendar" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/end_date"
                    android:textSize="@dimen/small_txt" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="TODO"
                        android:src="@drawable/ic_baseline_calendar_today_24"></ImageView>

                    <Button
                        android:id="@+id/btn_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/calendar" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_days" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_mon"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorText"
                android:text="@string/mon" />

            <Button
                android:id="@+id/btn_tue"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorText"
                android:text="@string/tue" />

            <Button
                android:id="@+id/btn_wen"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorText"
                android:text="@string/Wen" />

            <Button
                android:id="@+id/btn_thu"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorText"
                android:text="@string/Thu" />

            <Button
                android:id="@+id/btn_fri"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorText"
                android:text="@string/Fri" />

            <Button
                android:id="@+id/btn_sat"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorText"
                android:text="@string/Sat" />

            <Button
                android:id="@+id/btn_sun"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorText"
                android:text="@string/Sun" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_save" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>