<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="50sp" />

        <!--        <EditText-->
        <!--            android:id="@+id/edit_txt_name"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:background="@drawable/edittxt_custom"-->
        <!--            android:hint="Name"-->
        <!--            android:inputType="textPersonName"-->
        <!--            android:padding="15dp"-->
        <!--            android:textSize="15sp" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <EditText-->
        <!--            android:id="@+id/edit_txt_Age"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:background="@drawable/edittxt_custom"-->
        <!--            android:hint="Age"-->
        <!--            android:inputType="number"-->
        <!--            android:padding="15dp"-->
        <!--            android:textSize="15sp" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_txt_Age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <EditText-->
        <!--            android:id="@+id/edit_txt_email"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:background="@drawable/edittxt_custom"-->
        <!--            android:hint="Email"-->
        <!--            android:inputType="textEmailAddress"-->
        <!--            android:padding="15dp"-->
        <!--            android:textSize="15sp" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <EditText-->
        <!--            android:id="@+id/edit_txt_password"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:background="@drawable/edittxt_custom"-->
        <!--            android:hint="Password"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:padding="15dp"-->
        <!--            android:textSize="15sp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_baseline_add_circle_24"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_your_phone"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/caregiver_phone_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_caregiver_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_baseline_add_circle_24"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_care_giver_phone"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_custom"
            android:text="@string/signup"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/colorText"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>