<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Screens.PatientCareGiver.PatientCareGiverActivity">

    <TextView
        android:id="@+id/txt_Join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JoinNow"
        android:textSize="@dimen/xlarge_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <ImageView
        android:id="@+id/img_patient"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/patient"
        android:src="@drawable/circle_image_button"
        android:onClick="registerIntentPatient"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.549" />

    <ImageView
        android:id="@+id/img_caregiver"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/caregiver"
        android:src="@drawable/circle_image_button"
        android:onClick="registerIntentCaregiver"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/txt_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient"
        android:textSize="@dimen/medium_txt"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toEndOf="@+id/img_patient"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/txt_caregiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caregiver"
        android:textSize="@dimen/medium_txt"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="@+id/img_caregiver"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.479" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="153dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="335dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="560dp" />
</androidx.constraintlayout.widget.ConstraintLayout>